Fixes to markdown rendering (mostly) * User names and hashtags are now formatted like normal statuses * Bullet points now show properly * Monologuing statuses now truncate to the first newline even if they're less than 400 characters

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -371,6 +371,28 @@
     font-weight: bold;
   }
 
+  ul {
+    list-style: disc outside none;
+    margin-left: 20px;
+  }
+
+  ol {
+    list-style: decimal outside none;
+    margin-left: 20px;
+  }
+
+  ul ul, ol ul {
+    list-style-type: circle;
+  }
+
+  ul ul ul, ul ol ul, ol ul ul, ol ol ul {
+    list-style-type: square;
+  }
+
+  ol ol, ul ol {
+    list-style-type: lower-latin;
+  }
+
   .status__content__spoiler-link {
     background: lighten($color1, 30%);
 
